kubernetes/addons/observability/gotify/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://gotify.default.internal.javiersant.com"
    gethomepage.dev/description: Gotify
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: gotify.svg
    gethomepage.dev/name: Gotify
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 494
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: gotify
          port: 80
  tls:
    secretName: wildcard-javiersant-com-tls
